# karaoke

./: .gitignore  Cargo.toml
src/: frame_splitter.rs  main.rs  mic.rs  note.rs  song.rs  song_library.rs  song_panel.rs  song_view.rs  timer.rs  track.rs
