[package]
name = "karaoke"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16"
cpal = "0.14"
ringbuf = "0.2"
rustfft = "6.0.0"
futures = "0.3.24"
iced = { git = "https://github.com/iced-rs/iced", features = ["canvas", "tokio"]}
iced_native = {git = "https://github.com/iced-rs/iced" }
iced_core = {git = "https://github.com/iced-rs/iced" }
